# ssl_fts

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  assert_equal_true.py  autocorrelation.py  baselines.ipynb  download_dataset.py  gigatable.py  job_script.sh  parse_and_generate_latex.py  plotting.py  print_final_metrics.py  print_final_metrics_and_latex.py  print_metrics.py  pyproject.toml  pytest.ini  rename_fits10.py  requirements.txt  result.txt  results_to_latex.py  run.py  run.sh  run_bypass_layer.sh  run_etth1.sh  run_fits_ett.sh  run_longExp.py  run_scripts.sh  run_scripts_exclude.sh  run_scripts_include.sh  run_variants.sh  setup.py  video_plotting copy.py  video_plotting.py
data/: .gitattributes  GD.csv  MRO.csv  gd.csv
dataset/: AAPL.csv  GD.csv  MRO.csv  exchange_rate.csv
deep_FITS/: deep_FITS_traffic.sh
exp/: exp_basic.py  exp_main.py  exp_main_se.py  exp_main_xgboost.py
models/: DLinear_FITS.py  FITS.py  FITS10.py  FITS100.py  FITS_100.py  FITS_DLinear.py  FITS_DLinear_no_ma.py  FITS_DLinear_no_seasonal.py  FITS_p.py  Stat_models.py  XGBoost.py  model_FITS_data_ETTh1_pred720_state_dict.pth  model_FITS_data_ETTh1_pred96_state_dict.pth  model_FITS_data_electricity_pred96_state_dict.pth
notebooks/: EDA.ipynb  EGG.ipynb  FFT_pure_python.ipynb  FITS.ipynb  FITS_exploration.ipynb  FITS_gpu_live_chart.ipynb  FITS_stock_price.ipynb  arma.ipynb  chaoticness.ipynb  compare_random_walk.ipynb  data_loading.ipynb  data_loading_basic_training.ipynb  discussion.ipynb  etth.ipynb  fft.ipynb  gd_FITS.ipynb  ma_vs_filter.ipynb  (+15 more)
(+950 files in other folders)
